validate fix attemp

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -11,37 +11,38 @@ on:
         description: 'Terraform CLI Version'
         required: true
 
-runs:
-  using: "composite"
-  steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+jobs:
+  runs:
+    using: "composite"
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Install Terraform
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_wrapper: false
-        terraform_version: ${{ inputs.terraform_cli_versions }}
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_wrapper: false
+          terraform_version: ${{ inputs.terraform_cli_versions }}
 
-    - name: Terraform Format Check
-      shell: pwsh
-      run: |
-        terraform `
-        -chdir="${{inputs.root_module_folder_relative_path}}" `
-        fmt `
-        -check
+      - name: Terraform Format Check
+        shell: pwsh
+        run: |
+          terraform `
+          -chdir="${{inputs.root_module_folder_relative_path}}" `
+          fmt `
+          -check
 
-    - name: Terraform Init
-      shell: pwsh
-      run: |
-        terraform `
-        -chdir="${{inputs.root_module_folder_relative_path}}" `
-        init `
-        -backend=false
+      - name: Terraform Init
+        shell: pwsh
+        run: |
+          terraform `
+          -chdir="${{inputs.root_module_folder_relative_path}}" `
+          init `
+          -backend=false
 
-    - name: Terraform Validate
-      shell: pwsh
-      run: |
-        terraform `
-        -chdir="${{inputs.root_module_folder_relative_path}}" `
-        validate
+      - name: Terraform Validate
+        shell: pwsh
+        run: |
+          terraform `
+          -chdir="${{inputs.root_module_folder_relative_path}}" `
+          validate
