--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,7 @@ jobs:
     runs-on:
       ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Validate Terraform
         uses: ./.github/workflows/validate
         with:
