Terraform for API essentials, build and release workflows

--- a/apps/api-server/Dockerfile
+++ b/apps/api-server/Dockerfile
@@ -1,8 +1,8 @@
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
-EXPOSE 5043
+EXPOSE 80
 
-ENV ASPNETCORE_URLS=http://+:5043
+ENV ASPNETCORE_URLS=http://+:80
 
 USER app
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:9.0 AS build
@@ -17,6 +17,18 @@ RUN dotnet build "Bingo-Todo.csproj" -c $configuration -o /app/build
 FROM build AS publish
 ARG configuration=Release
 RUN dotnet publish "Bingo-Todo.csproj" -c $configuration -o /app/publish /p:UseAppHost=false
+
+ARG ASPNETCORE_ENVIRONMENT
+ENV ASPNETCORE_ENVIRONMENT=$ASPNETCORE_ENVIRONMENT
+
+ARG AZURE_COSMOS_LISTCONNECTIONSTRINGURL
+ENV AZURE_COSMOS_LISTCONNECTIONSTRINGURL=$AZURE_COSMOS_LISTCONNECTIONSTRINGURL
+
+ARG AZURE_COSMOS_RESOURCEENDPOINT
+ENV AZURE_COSMOS_RESOURCEENDPOINT=$AZURE_COSMOS_RESOURCEENDPOINT
+
+ARG MONGO_DB_NAME
+ENV MONGO_DB_NAME=$MONGO_DB_NAME
 
 FROM base AS final
 WORKDIR /app
