--- a/.github/workflows/cd-template.yaml
+++ b/.github/workflows/cd-template.yaml
@@ -43,6 +43,9 @@ on:
         description: 'Terraform CLI Version'
         default: 'latest'
         type: string
+    secrets:
+      personal_access_token:
+        required: true
 
 jobs:
   plan:
@@ -60,6 +63,7 @@ jobs:
       ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
       ARM_USE_AZUREAD: true
       ARM_USE_OIDC: true
+      TF_VAR_github_personal_access_token: ${{ secrets.personal_access_token }}
 
     steps:
       - name: Checkout Code
@@ -160,6 +164,7 @@ jobs:
       ARM_USE_AZUREAD: true
       ARM_USE_OIDC: true
       AZAPI_RETRY_GET_AFTER_PUT_MAX_TIME: "60m"      
+      TF_VAR_github_personal_access_token: ${{ secrets.personal_access_token }}
 
     steps:
       - name: Download a Build Artifact
