--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -52,6 +52,7 @@ jobs:
       dependent_environment: 
       backend_azure_storage_account_container_name: dev
       terraform_cli_version: ${{ inputs.terraform_cli_version }}
+      personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
   # test_plan_and_apply:
   #   uses: ./.github/workflows/cd-template.yaml
@@ -72,6 +73,7 @@ jobs:
   #     dependent_environment: dev
   #     backend_azure_storage_account_container_name: test
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
   # prod_plan_and_apply:
   #   uses: ./.github/workflows/cd-template.yaml
@@ -92,4 +94,5 @@ jobs:
   #     dependent_environment: test
   #     backend_azure_storage_account_container_name: prod
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
