--- a/.github/workflows/ci-template.yaml
+++ b/.github/workflows/ci-template.yaml
@@ -39,6 +39,9 @@ on:
         description: 'Terraform CLI Version'
         default: 'latest'
         type: string
+    secrets:
+      personal_access_token:
+        required: true
 
 jobs:
   plan:
@@ -60,6 +63,7 @@ jobs:
       ARM_TENANT_ID: "${{ vars.AZURE_TENANT_ID }}"
       ARM_USE_AZUREAD: true
       ARM_USE_OIDC: true
+      TF_VAR_github_personal_access_token: ${{ secrets.personal_access_token }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
