--- a/apps/api-server/appsettings.json
+++ b/apps/api-server/appsettings.json
@@ -1,8 +1,7 @@
 {
-  "BookStoreDatabase": {
-    "ConnectionString": "mongodb://mongodb:27017",
-    "DatabaseName": "BookStore",
-    "BooksCollectionName": "Books"
+  "MongoDB": {
+    "ConnectionString": null,
+    "DatabaseName": "BookStore"
   },
   "Logging": {
     "LogLevel": {
