Image tag as input for container creation step

--- a/.github/workflows/cd-template.yaml
+++ b/.github/workflows/cd-template.yaml
@@ -43,6 +43,10 @@ on:
         description: 'Terraform CLI Version'
         default: 'latest'
         type: string
+      image_tag:
+        description: 'Image tag to use during container app creation'
+        type: string
+        required: true
     secrets:
       personal_access_token:
         required: true
@@ -64,6 +68,7 @@ jobs:
       ARM_USE_AZUREAD: true
       ARM_USE_OIDC: true
       TF_VAR_github_personal_access_token: ${{ secrets.personal_access_token }}
+      TF_VAR_image_tag: "${{ vars.image_tag }}"
 
     steps:
       - name: Checkout Code
@@ -165,6 +170,7 @@ jobs:
       ARM_USE_OIDC: true
       AZAPI_RETRY_GET_AFTER_PUT_MAX_TIME: "60m"      
       TF_VAR_github_personal_access_token: ${{ secrets.personal_access_token }}
+      TF_VAR_image_tag: "${{ vars.image_tag }}"
 
     steps:
       - name: Download a Build Artifact
