--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,7 +30,11 @@ on:
         description: 'Terraform CLI Version'
         required: true
         default: 'latest'
-        type: string      
+        type: string
+      sha:
+        description: 'Image tag to use during container app creation'
+        type: string
+        required: false
 
 jobs:
   dev_plan_and_apply:
@@ -52,6 +56,7 @@ jobs:
       dependent_environment: 
       backend_azure_storage_account_container_name: dev
       terraform_cli_version: ${{ inputs.terraform_cli_version }}
+      image_tag: ${{ github.event.inputs.sha || github.sha }}
     secrets:
       personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
@@ -74,6 +79,7 @@ jobs:
   #     dependent_environment: dev
   #     backend_azure_storage_account_container_name: test
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     image_tag: ${{ github.event.inputs.sha || github.sha }}
   #   secrets:
   #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
@@ -96,6 +102,7 @@ jobs:
   #     dependent_environment: test
   #     backend_azure_storage_account_container_name: prod
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     image_tag: ${{ github.event.inputs.sha || github.sha }}
   #   secrets:
   #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
