--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,11 @@ on:
         description: 'Terraform CLI Version'
         required: true
         default: 'latest'
-        type: string      
+        type: string
+      sha:
+        description: 'Image tag to use during container app creation'
+        type: string
+        required: false 
 
 jobs:
   validate:
@@ -44,6 +48,7 @@ jobs:
       dependent_environment: 
       backend_azure_storage_account_container_name: dev
       terraform_cli_version: ${{ inputs.terraform_cli_version }}
+      image_tag: ${{ github.event.inputs.sha || github.sha }}
     secrets:
       personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
@@ -64,6 +69,7 @@ jobs:
   #     dependent_environment: dev
   #     backend_azure_storage_account_container_name: test
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     image_tag: ${{ github.event.inputs.sha || github.sha }}
   #   secrets:
   #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
 
@@ -84,5 +90,6 @@ jobs:
   #     dependent_environment: test
   #     backend_azure_storage_account_container_name: prod
   #     terraform_cli_version: ${{ inputs.terraform_cli_version }}
+  #     image_tag: ${{ github.event.inputs.sha || github.sha }}
   #   secrets:
   #     personal_access_token: ${{ secrets.ACCESS_TOKEN_FOR_TERRAFORM }}
