--- a/apps/api-server/Api/appsettings.Development.json
+++ b/apps/api-server/Api/appsettings.Development.json
@@ -3,10 +3,16 @@
     "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "BookStore"
   },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "common",
+    "ClientId": "a6851f01-d48b-4fd0-b14a-cc28fbf3abde"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
