--- a/apps/api-server/Api/appsettings.json
+++ b/apps/api-server/Api/appsettings.json
@@ -3,6 +3,11 @@
     "ConnectionString": null,
     "DatabaseName": "BookStore"
   },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "common",
+    "ClientId": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
