Entra ClientId passed to Container App

--- a/apps/api-server/Api/Dockerfile
+++ b/apps/api-server/Api/Dockerfile
@@ -30,6 +30,9 @@ ENV AZURE_COSMOS_RESOURCEENDPOINT=$AZURE_COSMOS_RESOURCEENDPOINT
 ARG MONGO_DB_NAME
 ENV MONGO_DB_NAME=$MONGO_DB_NAME
 
+ARG OVERRIDE_AzureAd__ClientId
+ENV OVERRIDE_AzureAd__ClientId=$OVERRIDE_AzureAd__ClientId
+
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
