Dockerfile is the -f by default

--- a/.github/workflows/api-build.yaml
+++ b/.github/workflows/api-build.yaml
@@ -60,4 +60,4 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az acr build -r ${{ vars.ACR_NAME }} -g ${{ vars.RESOURCE_GROUP_NAME }} -f ./Dockerfile -t bingo/dotnetapi:${{ github.sha }} ./apps/api-server/Api
+            az acr build -r ${{ vars.ACR_NAME }} -g ${{ vars.RESOURCE_GROUP_NAME }} -t bingo/dotnetapi:${{ github.sha }} ./apps/api-server/Api
