--- a/.github/workflows/api-integration-test.yaml
+++ b/.github/workflows/api-integration-test.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: App Settings Variable Substitution
         uses: microsoft/variable-substitution@v1
         with:
-          files: './appsettings.json'
+          files: './apps/api-server/BingoTodo.IntegrationTests/appsettings.json'
         env:
           AzureAd.ClientCredentials.ClientSecret: ${{ secrets.TEST_AGENT_CLIENT_SECRET }}
           AzureAd.TenantId: ${{ env.AZURE_TENANT_ID }}
