--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,137 +1,163 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "build",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/apps/api-server/api-server.sln",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary;ForceNoAlign"
-            ],
-            "problemMatcher": "$msCompile"
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "build",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "build",
+        "${workspaceFolder}/apps/api-server/api-server.sln",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary;ForceNoAlign"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "publish",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "publish",
+        "${workspaceFolder}/apps/api-server/api-server.sln",
+        "/property:GenerateFullPaths=true",
+        "/consoleloggerparameters:NoSummary;ForceNoAlign"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "label": "watch",
+      "command": "dotnet",
+      "type": "process",
+      "args": [
+        "watch",
+        "run",
+        "--project",
+        "${workspaceFolder}/apps/api-server/api-server.sln"
+      ],
+      "problemMatcher": "$msCompile"
+    },
+    {
+      "type": "docker-build",
+      "label": "docker-build: debug",
+      "dependsOn": ["build"],
+      "dockerBuild": {
+        "tag": "bingotodo:dev",
+        "target": "base",
+        "dockerfile": "${workspaceFolder}/apps/api-server/Api/Dockerfile",
+        "context": "${workspaceFolder}",
+        "pull": true
+      },
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
+      }
+    },
+    {
+      "type": "docker-build",
+      "label": "docker-build: unittest",
+      "dependsOn": ["build"],
+      "dockerBuild": {
+        "tag": "bingotodo:unittest",
+        "target": "build",
+        "dockerfile": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/Dockerfile",
+        "context": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests",
+        "pull": true
+      },
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/BingoTodo.UnitTests.csproj"
+      }
+    },
+    {
+      "type": "docker-build",
+      "label": "docker-build: release",
+      "dependsOn": ["build"],
+      "dockerBuild": {
+        "tag": "bingotodo:latest",
+        "dockerfile": "${workspaceFolder}/apps/api-server/Api/Dockerfile",
+        "context": "${workspaceFolder}",
+        "platform": {
+          "os": "linux",
+          "architecture": "amd64"
         },
-        {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/apps/api-server/api-server.sln",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary;ForceNoAlign"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/apps/api-server/api-server.sln"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "type": "docker-build",
-            "label": "docker-build: debug",
-            "dependsOn": [
-                "build"
-            ],
-            "dockerBuild": {
-                "tag": "bingotodo:dev",
-                "target": "base",
-                "dockerfile": "${workspaceFolder}/apps/api-server/Api/Dockerfile",
-                "context": "${workspaceFolder}",
-                "pull": true
-            },
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
-            }
-        },
-        {
-            "type": "docker-build",
-            "label": "docker-build: unittest",
-            "dependsOn": [
-                "build"
-            ],
-            "dockerBuild": {
-                "tag": "bingotodo:unittest",
-                "target": "build",
-                "dockerfile": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/Dockerfile",
-                "context": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests",
-                "pull": true
-            },
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/BingoTodo.UnitTests.csproj"
-            }
-        },
-        {
-            "type": "docker-build",
-            "label": "docker-build: release",
-            "dependsOn": [
-                "build"
-            ],
-            "dockerBuild": {
-                "tag": "bingotodo:latest",
-                "dockerfile": "${workspaceFolder}/apps/api-server/Api/Dockerfile",
-                "context": "${workspaceFolder}",
-                "platform": {
-                    "os": "linux",
-                    "architecture": "amd64"
-                },
-                "pull": true
-            },
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
-            }
-        },
-        {
-            "type": "docker-run",
-            "label": "docker-run: debug",
-            "dependsOn": [
-                "docker-build: debug"
-            ],
-            "dockerRun": {
-                "ports": [
-                    {
-                        "hostPort": 8080,
-                        "containerPort": 8080
-                    }
-                ]
-            },
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj",
-                "enableDebugging": true
-            }
-        },
-        {
-            "type": "docker-run",
-            "label": "docker-run: release",
-            "dependsOn": [
-                "docker-build: release"
-            ],
-            "dockerRun": {},
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
-            }
-        },
-        {
-            "type": "docker-run",
-            "label": "docker-run: unittest",
-            "dependsOn": [
-                "docker-build: unittest"
-            ],
-            "dockerRun": {},
-            "netCore": {
-                "appProject": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/BingoTodo.UnitTests.csproj",
-                "enableDebugging": true
-            }
+        "pull": true
+      },
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
+      }
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: debug",
+      "dependsOn": ["docker-build: debug"],
+      "dockerRun": {
+        "ports": [
+          {
+            "hostPort": 8080,
+            "containerPort": 8080
+          }
+        ]
+      },
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj",
+        "enableDebugging": true
+      }
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: release",
+      "dependsOn": ["docker-build: release"],
+      "dockerRun": {},
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/Api/BingoTodo.Api.csproj"
+      }
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: unittest",
+      "dependsOn": ["docker-build: unittest"],
+      "dockerRun": {},
+      "netCore": {
+        "appProject": "${workspaceFolder}/apps/api-server/BingoTodo.UnitTests/BingoTodo.UnitTests.csproj",
+        "enableDebugging": true
+      }
+    },
+    {
+      "type": "npm",
+      "script": "start",
+      "isBackground": true,
+      "path": "/apps/web-app",
+      "problemMatcher": {
+        "owner": "typescript",
+        "pattern": "$tsc",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": {
+            "regexp": "(.*?)"
+          },
+          "endsPattern": {
+            "regexp": "bundle generation complete"
+          }
         }
-    ]
+      }
+    },
+    {
+      "type": "npm",
+      "script": "test",
+      "isBackground": true,
+      "path": "/apps/web-app",
+      "problemMatcher": {
+        "owner": "typescript",
+        "pattern": "$tsc",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": {
+            "regexp": "(.*?)"
+          },
+          "endsPattern": {
+            "regexp": "bundle generation complete"
+          }
+        }
+      }
+    }
+  ]
 }
