Set up static web app with terraform

--- a/.github/workflows/api-integration-test.yaml
+++ b/.github/workflows/api-integration-test.yaml
@@ -27,7 +27,7 @@ jobs:
           AzureAd.ClientCredentials.0.ClientSecret: ${{ secrets.TEST_AGENT_CLIENT_SECRET }}
           AzureAd.TenantId: ${{ vars.AZURE_TENANT_ID }}
           AzureAd.ClientId: ${{ vars.TEST_CLIENT_ID }}
-          WebAPI.BaseUrl: ${{ vars.ACA_URL }}
+          WebAPI.BaseUrl: ${{ vars.API_URL }}
           WebAPI.Scopes.0: ${{ vars.SERVICE_DEFAULT_SCOPE }}
       - name: Build
         run: dotnet build --no-restore
