--- a/.github/workflows/web-build.yaml
+++ b/.github/workflows/web-build.yaml
@@ -57,7 +57,7 @@ jobs:
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: "/apps/web-app" # App source code path
           # api_location: "" # Api source code path - optional
-          output_location: "dist" # Built app content directory - optional
+          # output_location: "dist" # Built app content directory - optional
           production_branch: "main"
           github_id_token: ${{ steps.idtoken.outputs.result }}
           deployment_environment: github.ref != 'refs/heads/main' ?? "staging" || null
