--- a/.github/workflows/web-build.yaml
+++ b/.github/workflows/web-build.yaml
@@ -1,4 +1,4 @@
-name: Azure Static Web Apps CI/CD
+name: Build and release Frontend
 
 on:
   workflow_dispatch:
@@ -57,11 +57,11 @@ jobs:
           # For more information regarding Static Web App workflow configurations, please visit: https://aka.ms/swaworkflowconfig
           app_location: "/apps/web-app" # App source code path
           # api_location: "" # Api source code path - optional
-          output_location: "dist/web-app" # Built app content directory - optional
+          output_location: "dist" # Built app content directory - optional
           production_branch: "main"
           github_id_token: ${{ steps.idtoken.outputs.result }}
           deployment_environment: github.ref != 'refs/heads/main' ?? "staging" || null
-          api_build_command: "npm build --configuration production"
+          app_build_command: "npm run ng build --configuration=production"
           ###### End of Repository/Build Configurations ######
 
   # close_pull_request_job:
