--- a/.github/workflows/web-build.yaml
+++ b/.github/workflows/web-build.yaml
@@ -60,7 +60,7 @@ jobs:
           output_location: "dist/web-app/browser" # Built app content directory - optional
           production_branch: "main"
           github_id_token: ${{ steps.idtoken.outputs.result }}
-          deployment_environment: ${{ github.ref != 'refs/heads/main' && 'staging' || null }}
+          deployment_environment: ${{ github.ref != 'refs/heads/main' && 'staging' || 'production' }}
           app_build_command: "npm run ng build --configuration=production"
           ###### End of Repository/Build Configurations ######
 
