--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -13,30 +13,40 @@
       {
         "files": "*.html",
         "options": {
-          "parser": "angular"
+          "parser": "angular",
+          "printWidth": 100,
+          "tabWidth": 2,
+          "useTabs": false,
+          "embeddedLanguageFormatting": "off",
+          "singleQuote": true,
+          "semi": true,
+          "quoteProps": "preserve",
+          "bracketSpacing": false,
+          "trailingComma": "all",
+          "bracketSameLine": true
         }
       }
     ]
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^20.0.5",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/material": "^20.0.5",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/router": "^20.0.0",
+    "@angular/cdk": "^20.1.3",
+    "@angular/common": "^20.1.3",
+    "@angular/compiler": "^20.1.3",
+    "@angular/core": "^20.1.3",
+    "@angular/forms": "^20.1.3",
+    "@angular/material": "^20.1.3",
+    "@angular/platform-browser": "^20.1.3",
+    "@angular/router": "^20.1.3",
     "@azure/msal-angular": "^4.0.12",
     "@azure/msal-browser": "^4.13.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.0.4",
-    "@angular/cli": "^20.0.4",
-    "@angular/compiler-cli": "^20.0.0",
+    "@angular/build": "^20.1.3",
+    "@angular/cli": "^20.1.3",
+    "@angular/compiler-cli": "^20.1.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
