--- a/apps/web-app/package.json
+++ b/apps/web-app/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "^20.1.3",
     "@azure/msal-angular": "^4.0.12",
     "@azure/msal-browser": "^4.13.2",
+    "angular-ecmascript-intl": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
