--- a/apps/api-server/BingoTodo.UnitTests/Dockerfile
+++ b/apps/api-server/BingoTodo.UnitTests/Dockerfile
@@ -1,9 +1,16 @@
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:9.0 AS buildtest
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY "./BingoTodo.UnitTests.csproj" .
-RUN dotnet restore
-
+COPY "./BingoTodo.UnitTests/BingoTodo.UnitTests.csproj" "./BingoTodo.UnitTests/BingoTodo.UnitTests.csproj"
+COPY "./Api/BingoTodo.Api.csproj" "./Api/BingoTodo.Api.csproj"
+RUN dotnet restore "./BingoTodo.UnitTests/BingoTodo.UnitTests.csproj"
 COPY . .
-RUN dotnet build
+WORKDIR "/src/BingoTodo.UnitTests"
+RUN dotnet build "BingoTodo.UnitTests.csproj" -c $BUILD_CONFIGURATION
 
-RUN dotnet test --no-build --logger:console;verbosity=detailed
+FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS build
+RUN apt-get update && apt-get install -y libcurl4
+WORKDIR /test
+ENV DOTNET_CLI_TELEMETRY_OPTOUT=1
+COPY --from=buildtest /src/BingoTodo.UnitTests/bin/Debug/net9.0 ./test
+ENTRYPOINT ["dotnet", "./test/BingoTodo.UnitTests.dll", "--results-directory", "/home/app/TestResults"]
