--- a/apps/api-server/Api/appsettings.Development.json
+++ b/apps/api-server/Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "MongoDB": {
-    "ConnectionString": "mongodb://mongodb:27017",
-    "DatabaseName": "BookStore"
+    "ConnectionString": "mongodb://host.docker.internal:27017",
+    "DatabaseName": "Bingo"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
