--- a/apps/api-server/Api/appsettings.json
+++ b/apps/api-server/Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "MongoDB": {
     "ConnectionString": null,
-    "DatabaseName": "BookStore"
+    "DatabaseName": "Bingo"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
